add event.list operation
